package games;

public enum TypeGame {

    TICTACTOE,
    HANGMAN;


}
