package games.game.HangManGame;

public interface HangManPlayer extends WordGiverable, WordGuesserable{

}
