package games.players;

public class Result {
/*    private game.TypeGame typeGame;*/
    private int win;
    private int lose;
    private int tie;
    private Player Player;

}
